# recall

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-macos.txt  requirements.txt  setup.py  setup_app.py  test_menubar.py  test_menubar_fixed.py
.devcontainer/: devcontainer.json
docs/: AUDIO_SETUP.md  INSTALL.md  PERMISSIONS.md
examples/: auto_detection_demo.py  basic_usage.py  demo_recording_pipeline.py  full_pipeline_demo.py  knowledge_demo.py  knowledge_demo_real.py  menubar_demo.py  model_setup.py  simple_llm_demo.py  sprint7_packaging_demo.py  test_sprint1_integration.py
resources/: README.md
scripts/: __init__.py  build_app.sh  check_audio_setup.py  create_dmg.sh  download_llama_model.py  download_qwen_model.py
src/recall/: __init__.py  (+4 more)
tests/: conftest.py  test_analyze.py  test_analyze_summary.py  test_app_bundle.py  test_app_hotkeys.py  test_app_installer.py  test_app_menubar.py  test_app_notifications.py  test_app_permissions.py  test_app_recording.py  test_capture_detector.py  test_capture_monitor.py  test_capture_recorder.py  test_capture_youtube.py  test_check_audio_setup.py  test_cli.py  test_config.py  test_knowledge_graphrag.py  test_knowledge_ingest.py  test_knowledge_integration.py  test_knowledge_query.py  test_knowledge_sync.py  test_model_discovery.py  test_notes_knowledge_integration.py  test_notes_quick_note.py  test_notes_voice_note.py  test_pipeline_ingest.py  test_pipeline_progress.py  test_sprint6_e2e.py  test_storage_index.py  test_storage_markdown.py  test_storage_models.py  test_transcribe.py
(+34 files in other folders)
